--- a/Html/index03.html
+++ b/Html/index03.html
@@ -102,6 +102,7 @@
             <div class="protocol">
                 <label>
                     <input type="checkbox" name="" id="">
+                    <span class="checkbox"></span>
                 我已同意<a href="">《哔哩哔哩弹幕网用户使用协议》</a>和<a href="">《哔哩哔哩隐私政策》</a>
                 </label>
                 
