对笔记的排版进行了美化

--- a/Html/属性的计算值.html
+++ b/Html/属性的计算值.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>属性值的计算过程</title>
-    <link rel="stylesheet" href="./css/selector.css">
-    <link rel="stylesheet" href="./css/reset.css">
+    <style>
+        .container{
+            width:280px;
+            margin:auto;
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
     <h1 class="center" >属性值的计算过程</h1>
     <ul class="light">
         <li>确定无冲突的属性</li>
@@ -18,5 +23,7 @@
     </ul>
     initila:默认值;
     inherit:继承;
+    </div>
+
 </body>
 </html>
