--- a/Html/选择器.html
+++ b/Html/选择器.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/selector.css">
 </head>
 <body>
-    <a href="www.baidu.com" >鼠标悬停时变红色，手机端无效</a></a></a>
+    <a href="www.baidu.com" >鼠标悬停时变绿色，手机端无效</a></a></a>
     <h5>鼠标按下会变成hongse</h5>
     <p class="active">鼠标按下会变成绿色</p>
 
