--- a/Html/目录.html
+++ b/Html/目录.html
@@ -45,6 +45,8 @@
                 <li><a href="box.html">盒模型</a></li>
                 <li><a href="盒模型应用.html">盒模型应用</a></li>
                 <li><a href="更多的样式.html">更多的样式</a></li>
+                <li><a href="表格.html">表格</a></li>
+                <li><a href="其它不常用元素.html">其它不常用的元素</a></li>
               
             </ul>
         </div>
