change position practic

--- a/Html/定位练习.html
+++ b/Html/定位练习.html
@@ -16,7 +16,7 @@
              <li>客户服务
                  <div class="submenu">
                      <ul>
-                         <li class="model">黑屏
+                         <li class="model">点击黑屏
                              <div class="container">
                                  <div class="main">
                                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus aspernatur vero delectus optio! Possimus non, dolorem ipsam, animi nulla tenetur, voluptatem repellat deleniti fugiat cumque voluptates? Dolore rem ad illo similique quis dignissimos iusto nemo dolores temporibus repellat ipsum aperiam, adipisci harum nam aliquam exercitationem accusantium consectetur maxime explicabo sit! Tempora quod, error cumque incidunt repudiandae excepturi doloribus enim? Porro doloremque, accusamus ipsam reprehenderit molestiae dicta doloribus illum. Eius culpa esse aspernatur, eveniet debitis exercitationem tenetur sapiente consectetur placeat quasi quam ipsam, totam similique aut impedit quis laboriosam modi nobis alias nostrum unde nam? At, quidem nisi ratione dolorum rem repellat, voluptatem vel harum obcaecati nihil, tenetur minima necessitatibus atque qui quibusdam maiores totam laboriosam veritatis. Modi delectus minima quae, totam commodi debitis iste tempore sit saepe ad, laboriosam officiis aut facilis repudiandae eaque itaque in eos. Quidem vero ullam ut mollitia pariatur! Tempora accusantium at reiciendis facilis neque nemo aliquam molestiae odio, illo assumenda laboriosam placeat consequatur omnis amet fugiat, corporis error? Minima eligendi ab necessitatibus facilis eius aut culpa doloremque pariatur beatae, enim cupiditate reiciendis error quisquam quas quis provident rem maxime mollitia recusandae corrupti exercitationem, praesentium eaque itaque assumenda. Commodi accusamus voluptate, ut fuga molestias numquam aliquid laudantium, sunt ipsam laborum iste impedit. Debitis nobis tenetur officiis consequuntur quasi possimus consequatur minus maxime, praesentium ab qui aut odit corporis veritatis blanditiis, distinctio numquam quod placeat voluptates non, aperiam ipsam. Quos dolorem laboriosam nemo eaque perspiciatis dicta natus, facere id maiores, autem obcaecati impedit iure voluptates beatae nesciunt delectus consequatur libero. Corporis quidem rem esse dicta eligendi repudiandae, dolorem asperiores veritatis ipsum modi distinctio beatae blanditiis similique aliquid quaerat est velit libero cum, assumenda dolore. Esse natus laboriosam officia aspernatur dolore itaque suscipit, aperiam est placeat omnis modi excepturi inventore reiciendis consequatur iure asperiores repellendus laudantium impedit. Eveniet!
@@ -24,7 +24,7 @@
                                  </div>
                              </div>
                          </li>
-                         <li class="modeloff">取消黑屏</li>
+                         <li class="modeloff">sublin</li>
                          <li>Numquam</li>
                          <li>Tempora</li>
                          <li>Cum!</li>
